# serializer version: 1
# name: test_entities[light.cct_0000_03-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 8000,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 1000,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.cct_0000_03',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'sunricher_dali',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01020000036A242121110E',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[light.cct_0000_03-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'CCT 0000-03',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 8000,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 1000,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'light.cct_0000_03',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[light.dimmer_0000_02-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.dimmer_0000_02',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'sunricher_dali',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01010000026A242121110E',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[light.dimmer_0000_02-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dimmer 0000-02',
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.dimmer_0000_02',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[light.hs_color_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.hs_color_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'sunricher_dali',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01030000046A242121110E',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[light.hs_color_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HS Color Light',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.HS: 'hs'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'light.hs_color_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[light.rgbw_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGBW: 'rgbw'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.rgbw_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'sunricher_dali',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01040000056A242121110E',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[light.rgbw_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'RGBW Light',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
      <LightEntityStateAttribute.RGBW_COLOR: 'rgbw_color'>: None,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGBW: 'rgbw'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'light.rgbw_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
